Fixing profile search bar and planner positioning
When loaded and rendered locally before the edit, the search bar appears behind the planner. Fixed it by adding styling to
the search bar that puts it above it. However, it might not be the best fix since the original author was using absolute
positioning for the css of these components, so it might differ from screen to screen. May have to properly fix later
time permitting.

--- a/bruin-workout/src/styles/Profile.css
+++ b/bruin-workout/src/styles/Profile.css
@@ -77,7 +77,7 @@ h2 {
 .workout-planner {
     position: absolute;
     background-color: #C4C4C4;
-    height: 50%;
+    height: 45%;
     width: 50%;
     bottom: 30%;
     left: 40%;
@@ -92,4 +92,10 @@ h2 {
     bottom: 70%;
     left: 10%;
     border: thin solid black;
+}
+
+#profile-search-container {
+    position: absolute;
+    bottom: 78%;
+    left: 70%;
 }
